<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="@dimen/header_width"
            android:layout_height="@dimen/header_height"
            android:text="@string/gadgets"
            android:textSize="@dimen/big_text_size"
            />
        <TextView
            android:id="@+id/gadgetResponse"
            android:layout_width="@dimen/view_width"
            android:layout_height="@dimen/view_height"
            android:textSize="@dimen/medium_text_size"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="@dimen/view_width"
                android:layout_height="@dimen/view_height"
                android:text="@string/gadget_name"
                android:textSize="@dimen/medium_text_size"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_gadget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text_size"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gadget_txt_input"
                android:layout_width="@dimen/view_width"
                android:layout_height="@dimen/view_height"/>

            <Button
                android:layout_width="@dimen/button_width_big"
                android:layout_height="@dimen/button_height"
                android:id="@+id/btn_add_gadget"
                android:text="@string/add_gadget"
                android:textSize="@dimen/small_text_size"
                />

            <Button
                android:layout_width="@dimen/button_width_big"
                android:layout_height="@dimen/button_height"
                android:id="@+id/btn_view_gadgets"
                android:text="@string/view_all"
                android:textSize="@dimen/small_text_size"
                android:layout_marginBottom="@dimen/margin_small"
                />
        </LinearLayout>
    </ScrollView>
    <TextView
        android:layout_width="@dimen/view_width"
        android:layout_height="@dimen/view_height"
        android:textSize="@dimen/medium_text_size"
        android:layout_marginBottom="@dimen/margin_big"
        />
</LinearLayout>