<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.LoginActivity"
    android:orientation="vertical">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="@dimen/header_width"
        android:layout_height="@dimen/header_height"
        android:textSize="@dimen/big_text_size"
        android:text="@string/login"
        android:layout_marginBottom="@dimen/margin_small"
        />
    <TextView
        android:id="@+id/to_register"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="wrap_content"
        android:text="@string/back_to_register"
        android:textSize="@dimen/small_text_size"
        android:layout_marginBottom="@dimen/margin_small"
        android:textColor="@color/blue"
        android:layout_alignParentEnd="true"
        />
</RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/text_width"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/medium_text_size"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:textSize="@dimen/small_text_size"
                android:text="dvmena39@gmail.com"
               />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_txt_input_login"
                android:layout_width="@dimen/view_width"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="@dimen/text_width"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_text_size"
                android:text="@string/password"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:textSize="@dimen/small_text_size"
                android:text="123456"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_txt_input_login"
                android:layout_width="@dimen/view_width"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="@dimen/small_text_size"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/res_login"
                android:textSize="@dimen/medium_text_size"
                android:layout_marginBottom="@dimen/margin_big"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>