<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/top_bar">
        <TextView
            android:layout_width="@dimen/header_width"
            android:layout_height="@dimen/header_height"
            android:textSize="@dimen/big_text_size"
            android:text="@string/register"
            android:layout_marginBottom="@dimen/margin_small"
            />

        <TextView
            android:id="@+id/to_login"
            android:text="@string/back_to_login"
            android:layout_width="@dimen/view_width_small"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_text_size"
            android:textColor="@color/blue"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/margin_small"
            />


    </RelativeLayout>

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="@dimen/view_width"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_text_size"
                android:text="@string/email"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text_size"
                android:id="@+id/email_register"
                android:layout_marginBottom="@dimen/margin_small"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_txt_input_register"
                android:layout_width="@dimen/view_width"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="@dimen/view_width"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_text_size"
                android:text="@string/password"/>
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text_size"
                android:id="@+id/password_register"
                android:inputType="textPassword"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_txt_input_register"
                android:layout_width="@dimen/view_width"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/button_register"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text_size"
                android:text="@string/register"
                />


            <TextView
                android:id="@+id/res_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_text_size"
                android:layout_marginBottom="@dimen/margin_big"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>